# tasks_list

./: CMakeLists.txt  README.md  lista_zadan.cpp  polecenia.h
tests/: CMakeLists.txt  unit_test.cpp
